--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "docs-backend",
+  "name": "documentation-service",
   "version": "1.0.0",
   "description": "Documentation Service",
   "main": "src/index.js",
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://git.4all.com/fintech/phi/services/documentation/docs-backend.git"
+    "url": "https://github.com/somosphi/documentation-service.git"
   },
   "author": "PHI",
   "license": "MIT",
